// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Creation of invalid schemas Bad federation composition in schema gets rejected 1`] = `
Array [
  [GraphQLError: Schema federation validation failed],
]
`;

exports[`Creation of invalid schemas Invalid SDL in schema gets rejected 1`] = `
Array [
  [GraphQLError: Syntax Error: Expected Name, found <EOF>.],
]
`;

exports[`Creation of invalid schemas Invalid directive arguments in schema gets rejected 1`] = `
Array [
  [GraphQLError: Unknown argument "fakeArgument" on directive "@rest".],
]
`;
